syntax = "proto3";

option java_package = "org.sorapointa.proto";

// CmdId: 1232
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarFightPropNotify {
	uint64 avatar_guid = 3;
	map<uint32, float> fight_prop_map = 6;
}
