syntax = "proto3";

option java_package = "org.sorapointa.proto";

import "PropValue.proto";

// CmdId: 127
// EnetChannelId: 0
// EnetIsReliable: true
message PlayerPropNotify {
	map<uint32, PropValue> prop_map = 10;
}
